tests/syntax_tests/data/parsing/errors/expressions/letUnwrapRec.res
let? rec Some(baz) = someOption 
and Some(bar) = baz